# CamExtParamEst

./: CMakeLists.txt  README.md
data/: calibration_10_basement.txt  calibration_11_basement.txt  calibration_12_basement.txt  calibration_13_basement.txt  calibration_14_out.txt  calibration_15_ground_snow.txt  calibration_16_basement.txt  calibration_17_basement.txt  calibration_1_basement.txt  calibration_2_basement.txt  calibration_3_basement.txt  calibration_4_downhill.txt  calibration_5_ground.txt  calibration_6_uphill.txt  calibration_7_basement.txt  calibration_8_basement.txt  calibration_9_downhill.txt
src/: main.cpp
